<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:orientation="vertical">


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:src="@drawable/ncc_a3" />

            <TextView
                android:id="@+id/aim1_tv"
                style="@style/msgTV"
                android:text="@string/aim1" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@drawable/aim10" />

            <TextView
                android:id="@+id/aim2_tv"
                style="@style/msgTV"
                android:layout_marginTop="5dp"
                android:text="@string/aim2" />


            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:src="@drawable/aim11" />

            <TextView
                android:id="@+id/aim3_tv"
                style="@style/msgTV"
                android:layout_marginTop="5dp"
                android:text="@string/aim3" />
        </LinearLayout>

    </ScrollView>

</android.support.constraint.ConstraintLayout>


