<?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent"
    tools:context=".activities.CadetEnrollmentFormActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:src="@drawable/background" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_weight=".1"
                android:background="@color/red"
                android:gravity="center">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_50sdp"
                    android:weightSum="1.0">

                    <ImageView
                        style="@style/HorizontalWeight"
                        android:layout_weight=".2"
                        android:padding="@dimen/_8sdp"
                        android:src="@drawable/logo" />

                    <TextView
                        android:id="@+id/frg_title"
                        style="@style/HorizontalWeight"
                        android:layout_weight=".7"
                        android:gravity="center"
                        android:text="Enrollment Form"
                        android:textAlignment="gravity"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        android:textSize="@dimen/_16sdp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/button1"
                        style="@style/HorizontalWeight"
                        android:layout_weight=".1"
                        android:padding="@dimen/_3sdp"
                        android:src="@drawable/three_dots"
                        android:visibility="gone" />
                </LinearLayout>

            </android.support.v7.widget.Toolbar>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/_10sdp">

                <TextView
                    style="@style/my_title"
                    android:background="@color/red"
                    android:text="Educational Details"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:visibility="gone" />

                ////////////////////////////////////////////////////////////////////////////////////////////////

                <TextView
                    style="@style/my_tv"
                    android:gravity="left"
                    android:text="@string/Qualification" />

                <LinearLayout
                    style="@style/WrapMatchWeight"
                    android:orientation="horizontal"
                    android:weightSum="2">

                    <Spinner
                        android:id="@+id/class_spinner"
                        style="@style/my_et"
                        android:layout_weight="1"
                        android:hint="class" />

                    <EditText
                        android:id="@+id/marks_et"
                        style="@style/my_et"
                        android:layout_weight="1"
                        android:hint="@string/Marks"
                        android:inputType="number" />

                </LinearLayout>

                <TextView
                    style="@style/my_tv"
                    android:gravity="left"
                    android:text="@string/Identification" />

                <EditText
                    android:id="@+id/ide_mark1_et"
                    style="@style/my_et" />

                <TextView
                    style="@style/my_tv"
                    android:gravity="left"
                    android:text="@string/Mark2" />

                <EditText
                    android:id="@+id/ide_mark2_et"
                    style="@style/my_et"
                    android:layout_marginBottom="@dimen/_20sdp" />


                <Button
                    android:id="@+id/next_button"
                    style="@style/my_bt"
                    android:layout_margin="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_weight=".1"
                    android:text="@string/Save"
                    android:textColor="@color/white" />


            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>